--- a/source/css/matery.css
+++ b/source/css/matery.css
@@ -1628,3 +1628,22 @@ footer .copy-right {
     line-height: 48px;
     font-size: 1.8rem;
 }
+
+.img_shadow {
+  box-shadow: 0px 0px 14px 1px #666
+}
+
+.img_margin {
+  margin: 25px auto 15px auto;
+}
+
+.center-caption {
+  color: #5f5f5f;
+  padding: 10px;
+  border-bottom: 1px solid #d9d9d9;
+}
+
+.caption {
+  text-align: center;
+  margin: 0 auto 15px auto;
+}
