update: change the style of `some code`, because it's ugly on PC browser

--- a/source/css/matery.css
+++ b/source/css/matery.css
@@ -1628,3 +1628,7 @@ footer .copy-right {
     line-height: 48px;
     font-size: 1.8rem;
 }
+
+code {
+    font-family: Inconsolata, Monaco, Consolas, 'Courier New', Courier, monospace;
+}
