让图片居中，修改了两个样式的命名

--- a/source/css/matery.css
+++ b/source/css/matery.css
@@ -878,7 +878,7 @@ article .article-tags .chip {
     }
 
     #artDetail .article-info {
-        padding: 15px 20px 0px 28px;
+        padding: 15px 20px 0 28px;
         margin-bottom: -5px;
     }
 }
@@ -921,6 +921,10 @@ article .article-tags .chip {
     font-weight: 500;
     text-decoration: underline;
     word-wrap:break-word;
+}
+
+#articleContent .img-item {
+    text-align: center;
 }
 
 #articleContent img {
@@ -1667,11 +1671,11 @@ footer .copy-right {
     clear: left;
 }
 
-.img_shadow {
-  box-shadow: 0px 0px 14px 1px #666
+.img-shadow {
+  box-shadow: 0 0 30px 1px #999;
 }
 
-.img_margin {
+.img-margin {
   margin: 25px auto 15px auto;
 }
 
