修改一个CSS样式

--- a/source/css/matery.css
+++ b/source/css/matery.css
@@ -1698,3 +1698,8 @@ footer .copy-right {
   text-align: center;
   margin: 0 auto 15px auto;
 }
+
+.lg-sub-html .center-caption {
+    color: #fff !important;
+    border-bottom: none;
+}
