--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -78,6 +78,13 @@
     <link rel="stylesheet" type="text/css" href="/libs/lightGallery/css/lightgallery.min.css">
     <link rel="stylesheet" type="text/css" href="/css/matery.css">
     <link rel="stylesheet" type="text/css" href="/css/my.css">
+    <style type="text/css">
+        <% if (!theme.code.break) { %>
+        code[class*="language-"], pre[class*="language-"] {
+            white-space: pre !important;
+        }
+        <% } %>
+    </style>
 
     <script src="/libs/jquery/jquery-2.2.0.min.js"></script>
 </head>
