--- a/layout/_partial/post-detail-toc.ejs
+++ b/layout/_partial/post-detail-toc.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/libs/tocbot/tocbot.css">
+<link rel="stylesheet" href="<%- theme.libs.css.tocbot %>">
 <style>
     #articleContent h1,
     #articleContent h2,
@@ -99,7 +99,7 @@
     </div>
 </div>
 
-<script src="/libs/tocbot/tocbot.min.js"></script>
+<script src="<%- theme.libs.js.tocbot %>"></script>
 <script>
     $(function () {
         tocbot.init({
