--- a/layout/post.ejs
+++ b/layout/post.ejs
@@ -1,5 +1,5 @@
 <% if (theme.verifyPassword.enable) { %>
-<script src="/libs/cryptojs/crypto-js.min.js"></script>
+<script src="<%- theme.libs.js.crypto %>"></script>
 <script>
     (function() {
         let pwd = '<%- page.password %>';
