可以为某篇文章单独设置关闭TOC的功能，并在配置项中默认开启TOC.

--- a/layout/post.ejs
+++ b/layout/post.ejs
@@ -16,7 +16,7 @@
 <%- partial('_partial/post-cover') %>
 
 <%
-    var isTocEnable = theme.toc && theme.toc.enable;
+    var isTocEnable = theme.toc.enable && String(page.toc) !== 'false';
     var containerClass = isTocEnable ? 'post-container' : 'container';
 %>
 
