--- a/layout/_partial/search.ejs
+++ b/layout/_partial/search.ejs
@@ -4,7 +4,7 @@
         <div class="search-header">
             <span class="title"><i class="fa fa-search"></i>&nbsp;&nbsp;<%= __('search') %></span>
             <input type="search" id="searchInput" name="s" placeholder="<%= __('searchTip') %>"
-                   class="search-input" autofocus="">
+                   class="search-input">
         </div>
         <div id="searchResult"></div>
     </div>
