修复首页第一个按钮是中文的问题

--- a/layout/_partial/bg-cover.ejs
+++ b/layout/_partial/bg-cover.ejs
@@ -24,7 +24,7 @@
         <% if (is_home() && page.current === 1) { %>
         <div class="cover-btns">
             <a href="#recommend-sections" class="waves-effect waves-light btn">
-                <i class="fa fa-angle-double-down"></i>继续阅读
+                <i class="fa fa-angle-double-down"></i><%- __('startRead') %>
             </a>
 
             <% if (theme.indexbtn && theme.indexbtn.enable) { %>
