升级materlize的版本号为1.0.0，解决了几个升级过程中的问题

--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -72,7 +72,7 @@
     <link rel="icon" type="<%= iconType %>" href="<%- theme.favicon %>">
 
     <link rel="stylesheet" type="text/css" href="<%- theme.libs.css.fontAwesome %>">
-    <link rel="stylesheet" type="text/css" href="/libs/materialize/css/materialize.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" type="text/css" href="<%- theme.libs.css.aos %>">
     <link rel="stylesheet" type="text/css" href="<%- theme.libs.css.animate %>">
     <link rel="stylesheet" type="text/css" href="<%- theme.libs.css.lightgallery %>">
