--- a/layout/_partial/search.ejs
+++ b/layout/_partial/search.ejs
@@ -12,5 +12,7 @@
 
 <script src="/js/search.js"></script>
 <script type="text/javascript">
+$(function () {
     searchFunc("<%= config.root %>" + "search.xml", 'searchInput', 'searchResult');
+});
 </script>
