将materialize的前端库改成到本地

--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -11,7 +11,7 @@
 <%- partial('_partial/search') %>
 <%- partial('_partial/back-top') %>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+<script src="<%- theme.libs.js.materialize %>"></script>
 <script src="<%- theme.libs.js.masonry %>"></script>
 <script src="<%- theme.libs.js.aos %>"></script>
 <script src="<%- theme.libs.js.scrollProgress %>"></script>
