--- a/source/css/matery.css
+++ b/source/css/matery.css
@@ -187,6 +187,10 @@ mark {
     z-index: 500;
 }
 
+.pd-header {
+    margin-top: -64px;
+}
+
 header .side-nav {
     width: 240px;
     z-index: 999;
@@ -344,12 +348,15 @@ header .go-back i {
     align-items: center;
     height: 60vh;
     padding: 0;
-    margin-top: -64px;
     border: 0;
     overflow: hidden;
     background-position: center center;
     background-size: cover;
     transform: translate3d(0px, 0px, 0px);
+}
+
+.index-cover {
+    height: 100vh;
 }
 
 .post-cover {
@@ -477,8 +484,21 @@ header .go-back i {
     }
 }
 
+.carousel .indicators {
+    padding-bottom: 10px !important;
+}
+
 .index-card {
-    margin-top: -40px;
+    margin-top: -50px;
+    padding-top: 20px;
+}
+
+.carousel-post .title {
+    font-size: 2.6rem;
+}
+
+.carousel-post .cover-btns a {
+    margin-top: -30px;
 }
 
 .dream {
