修复ul的问题

--- a/layout/_partial/reward.ejs
+++ b/layout/_partial/reward.ejs
@@ -55,15 +55,8 @@
         padding-left: 0;
     }
 
-    @media only screen and (min-width: 993px) {
-
-    }
-
-    .reward-tabs .tabs .tab {
-        -webkit-box-flex: 1;
-        -webkit-flex-grow: 1;
-        -ms-flex-positive: 1;
-        flex-grow: 1;
+    .reward-content ul {
+        padding-left: 0 !important;
     }
 
     .reward-tabs .tabs .tab {
