新增TOC展开、收缩按钮在移动端中隐藏

--- a/layout/_partial/post-detail-toc.ejs
+++ b/layout/_partial/post-detail-toc.ejs
@@ -98,7 +98,7 @@
 </div>
 
 <!-- TOC 悬浮按钮. -->
-<div id="floating-toc-btn">
+<div id="floating-toc-btn" class="hide-on-med-and-down">
     <a class="btn-floating btn-large bg-color">
         <i class="fa fa-list"></i>
     </a>
