修复上一页、下一页的自定义 summary 不显示的问题

--- a/layout/_partial/prev-next.ejs
+++ b/layout/_partial/prev-next.ejs
@@ -39,7 +39,13 @@ var featureImages = theme.featureImages;
                     </div>
                 </a>
                 <div class="card-content article-content">
-                    <div class="summary block-with-text"><%- strip_html(page.prev.content).substring(0, 120) %></div>
+                    <div class="summary block-with-text">
+                        <% if (page.prev.summary && page.prev.summary.length > 0) { %>
+                            <%- page.prev.summary %>
+                        <% } else { %>
+                            <%- strip_html(page.prev.content).substring(0, 120) %>
+                        <% } %>
+                    </div>
                     <div class="publish-info">
                         <span class="publish-date">
                             <i class="fa fa-clock-o fa-fw icon-date"></i><%= date(page.prev.date, config.date_format) %>
@@ -95,7 +101,13 @@ var featureImages = theme.featureImages;
                     </div>
                 </a>
                 <div class="card-content article-content">
-                    <div class="summary block-with-text"><%- strip_html(page.content).substring(0, 120) %></div>
+                    <div class="summary block-with-text">
+                        <% if (page.summary && page.summary.length > 0) { %>
+                            <%- page.summary %>
+                        <% } else { %>
+                            <%- strip_html(page.content).substring(0, 120) %>
+                        <% } %>
+                    </div>
                     <div class="publish-info">
                             <span class="publish-date">
                                 <i class="fa fa-clock-o fa-fw icon-date"></i><%= date(page.date, config.date_format) %>
@@ -153,7 +165,13 @@ var featureImages = theme.featureImages;
                     </div>
                 </a>
                 <div class="card-content article-content">
-                    <div class="summary block-with-text"><%- strip_html(page.next.content).substring(0, 120) %></div>
+                    <div class="summary block-with-text">
+                        <% if (page.next.summary && page.next.summary.length > 0) { %>
+                            <%- page.next.summary %>
+                        <% } else { %>
+                            <%- strip_html(page.next.content).substring(0, 120) %>
+                        <% } %>
+                    </div>
                     <div class="publish-info">
                             <span class="publish-date">
                                 <i class="fa fa-clock-o fa-fw icon-date"></i><%= date(page.next.date, config.date_format) %>
@@ -209,7 +227,13 @@ var featureImages = theme.featureImages;
                     </div>
                 </a>
                 <div class="card-content article-content">
-                    <div class="summary block-with-text"><%- strip_html(page.content).substring(0, 120) %></div>
+                    <div class="summary block-with-text">
+                        <% if (page.summary && page.summary.length > 0) { %>
+                            <%- page.summary %>
+                        <% } else { %>
+                            <%- strip_html(page.content).substring(0, 120) %>
+                        <% } %>
+                    </div>
                     <div class="publish-info">
                             <span class="publish-date">
                                 <i class="fa fa-clock-o fa-fw icon-date"></i><%= date(page.date, config.date_format) %>
